# DICOM-Release-Notes

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: build.yml
data/: consolidated.json  consolidated_info.json
downloaded/: final.html  releasenotes_2020d.xml  releasenotes_2020e.xml  releasenotes_2021a.xml  releasenotes_2021b.xml  releasenotes_2021c.xml  releasenotes_2021d.xml  releasenotes_2021e.xml  releasenotes_2022a.xml  releasenotes_2022b.xml  releasenotes_2022c.xml  releasenotes_2022d.xml  releasenotes_2022e.xml  releasenotes_2023a.xml  releasenotes_2023b.xml  releasenotes_2023c.xml  releasenotes_2023d.xml  releasenotes_2023e.xml  releasenotes_2024a.xml  releasenotes_2024b.xml  releasenotes_2024c.xml  releasenotes_2024d.xml  releasenotes_2024e.xml  releasenotes_2025a.xml
src/dicom-release-notes/: download-document-list.py  download-release-notes.py  extract-document-list.py  extract-info.py  extract-release-notes.py  extract_release_notes.py  post_process.py  start.py
