[project]
name = "dicom-release-notes"
version = "0.1.0"
description = ""
authors = [
    {name = "celeron533",email = "zhuyilun8@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
#packages = [{include = "folder", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
